--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -23,7 +23,6 @@
     </div>
 
 	<script>
-<<<<<<< HEAD
     var latlong;
     var map;
     var GeoMarker;
@@ -54,28 +53,29 @@
     function errorCallback() {}
 
     var bldButtons = document.getElementsByClassName('ui button');
-
     for (var i = 0; i < bldButtons.length; i++) {
         var button = bldButtons[i];
 
         if (bldButtons[i].className == 'ui button') {
             button.addEventListener('click', function() {
-                //alert(this.value);
+
                 var latlng = this.value.split(',');
                 var lat = parseFloat(latlng[0]);
                 var lng = parseFloat(latlng[1]);
-                var contentString = '<div id="{{TOPIC_DICT[0]}}">'+
-                    '<div id="{{TOPIC_DICT[1]}}">'+
-                    '</div>'+
-                    '<h1 id="{{TOPIC_DICT[2]}}" class="{{TOPIC_DICT[3]}}">Computer Science</h1>'+
-                    '<img src="{{ url_for('static', filename='img/asktuffy2.png') }}">'+
-                    '<div id="{{TOPIC_DICT[4]}}">'+
-                    '<p><b>Computer Science</b>, {{TOPIC_DICT[5]}}</p>'+
-                    '<p>{{TOPIC_DICT[6]}} Uluru, '+
-                    '<a href="{{TOPIC_DICT[7]}}">{{TOPIC_DICT[8]}}</a>'+
-                    '</p>'+
-                    '</div>'+
-                    '</div>';
+                var bldid = this.id;
+                bldid = bldid.split("-");
+                var array = maindict[bldid[0]];
+
+                var contentString = '<div id="content">'+
+                                    '<div id="siteNotice">'+
+                                    '</div>'+
+                                    '<h1 id="firstHeading" class="firstHeading">'+ array[0] +' Building</h1>'+
+                                    '<div id="bodyContent">'+
+                                    '<img src="{{url_for('static', filename='img/asktuffy2.png')}}">'+
+                                    '<p><b>'+ array[0] + '</b> :'+ array[1] + '</p>'+
+                                    '<p><a href="' + array[2] + '">Link to '+ array[0] +' Building</a> '+
+                                    '</div>'+
+                                    '</div>';
 
                     var infowindow = new google.maps.InfoWindow({
                       content: contentString
@@ -84,7 +84,7 @@
                     var marker = new google.maps.Marker({
                         map: map,
                         animation: google.maps.Animation.DROP,
-                        title: 'CSUF'
+                        title: array[0]
                     });
                     marker.addListener('click', function() {
                       infowindow.open(map, marker);
@@ -107,47 +107,6 @@
             h = h - 12;
         } else if (h == 0) {
             h = 12;
-=======
-			var latlong;
-			var map;
-			var GeoMarker;
-			var directionsDisplay;
-			var directionsService;
-
-			function userLoc() {
-				if (navigator.geolocation) {	// Call geolocation to get user's current position
-			     	navigator.geolocation.getCurrentPosition(getCurrPos, errorCallback, {enableHighAccuracy:true});
-			    }
-				function getCurrPos(position) {
-			        document.getElementById('location').value = position.coords.latitude + "," + position.coords.longitude;
-			        //alert(document.getElementById('location').value);
-			   	}
-
-			   	function errorCallback() {}
-		   	}
-
-			var bldButtons = document.getElementsByClassName('ui button');
-       		for(var i = 0; i < bldButtons.length; i++) {
-            		var button = bldButtons[i];
-
-		    if (bldButtons[i].className == 'ui button') {
-		      button.addEventListener('click', function () {
-			//alert(this.value);
-			var latlng = this.value.split(',');
-			var lat = parseFloat(latlng[0]);
-			var lng = parseFloat(latlng[1]);
-
-			var marker = new google.maps.Marker({map:map});
-			marker.setPosition(new google.maps.LatLng(lat, lng));
-
-		      })
-		    }
-		    else {
-			button.addEventListener('click', function () {
-			document.getElementById('src1').value = this.id;
-			});
-		    }
->>>>>>> 45ad54027c51c6ffb87c4165eeacd051707050fb
         }
         var m = today.getMinutes();
         var s = today.getSeconds();
@@ -166,7 +125,7 @@
     }
 
     function initMap() { // displays map on page, sets up variables for the directions service for use later
-        startTime();
+//        startTime();
         var csufLocation = {
             lat: 33.881994,
             lng: -117.885076
@@ -303,159 +262,9 @@
 
         directionsDisplay.setMap(map);
 
-<<<<<<< HEAD
         {% block maproute %} {% endblock %}
     }
     document.getElementById('src1').value = "";
 </script>
-=======
-	        function startTime() {	// Displays real time clock
-	            var today = new Date();
-	            var h = today.getHours();
-	            if (h > 12) {
-	                h = h - 12;
-	            }
-	            else if (h == 0) {
-	            	h = 12;
-	            }
-	            var m = today.getMinutes();
-	            var s = today.getSeconds();
-	            h = checkTime(h);
-	            m = checkTime(m);
-	            s = checkTime(s);
-	            document.getElementById('txt').innerHTML=h+":"+m+":"+s;
-	            setTimeout(startTime, 500);
-	            {% block time %} {% endblock %}
-	        }
-	        function checkTime(i) {
-	            if (i < 10) {
-	                i = "0" + i;
-	            }
-	            return i;
-	        }
-	        startTime();
-	        initMap();
-
-		    function initMap() {	// displays map on page, sets up variables for the directions service for use later
-            var csufLocation = {
-              lat: 33.881994,
-              lng: -117.885076
-            };
-            directionsDisplay = new google.maps.DirectionsRenderer;
-
-		        directionsService = new google.maps.DirectionsService;
-		        var mapOptions = {
-		            zoom: 16,
-		            center: csufLocation,
-		            streetViewControl: false,
-		            mapTypeControl: false,
-		            styles: [{
-		                    "featureType": "landscape",
-		                    "stylers": [{
-		                            "hue": "#FFA800"
-		                        },
-		                        {
-		                            "saturation": 0
-		                        },
-		                        {
-		                            "lightness": 0
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                },
-		                {
-		                    "featureType": "road.highway",
-		                    "stylers": [{
-		                            "hue": "#53FF00"
-		                        },
-		                        {
-		                            "saturation": 100
-		                        },
-		                        {
-		                            "lightness": 40
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                },
-		                {
-		                    "featureType": "road.arterial",
-		                    "stylers": [{
-		                            "hue": "#FBFF00"
-		                        },
-		                        {
-		                            "saturation": 0
-		                        },
-		                        {
-		                            "lightness": 0
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                },
-		                {
-		                    "featureType": "road.local",
-		                    "elementType": "geometry",
-		                    "stylers": [{
-		                            "hue": "#FFFFFF"
-		                        },
-		                        {
-		                            "saturation": 100
-		                        },
-		                        {
-		                            "lightness": 100
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                },
-		                {
-		                    "featureType": "water",
-		                    "stylers": [{
-		                            "hue": "#00BFFF"
-		                        },
-		                        {
-		                            "saturation": 6
-		                        },
-		                        {
-		                            "lightness": 8
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                },
-		                {
-		                    "featureType": "poi",
-		                    "stylers": [{
-		                            "hue": "#679714"
-		                        },
-		                        {
-		                            "saturation": 33.4
-		                        },
-		                        {
-		                            "lightness": -25.4
-		                        },
-		                        {
-		                            "gamma": 1
-		                        }
-		                    ]
-		                }
-		            ]
-		        };
-		        map = new google.maps.Map(document.getElementById('map'), mapOptions);
-		        directionsDisplay.setMap(map);
-		        userLoc();
-		        {% block maproute %} {% endblock %}
-		    }
-		    document.getElementById('src1').value="";
-
-	</script>
->>>>>>> 45ad54027c51c6ffb87c4165eeacd051707050fb
 
 {% endblock %}
