building overlay and content.js updated
pending images of the buildings.
divided building.py for better read.
optimized campusmap.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key={{ key }}"></script>
     <script  src="{{ url_for('static', filename='scripts/geolocation-marker.js') }}"></script>
     <script  src="{{ url_for('static', filename='scripts/content.js') }}"></script>
+    <script  src="{{ url_for('static', filename='scripts/mapstyles.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <style>
         body.pushable>.pusher {
