--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,95 +1,76 @@
-        /* Always set the map height explicitly to define the size of the div
-         * element that contains the map. */
+html,
+      body {
+          height: 100%;
+          margin: 0;
+      }
 
-        html,
-        body.pushable>.pusher {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        
-        .container{
-            display:-webkit-box;
-            display:-ms-flexbox;
-            display:flex;
-            padding:8px;
+      .ui.sidebar {
+          overflow: visible !important;
+      }
 
-            height:100%;
-            -webkit-box-sizing:border-box;
-            box-sizing:border-box;
-        }
 
-        .ui.sidebar {
-            overflow: visible !important;
-        }
 
-        #map {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            top: 0px;
-            z-index: -1;
-        }
-	
-        #navbar {
-            position: relative;
-            margin-right: 50px;
-        }
-		
-        #right-panel {
-            position: absolute;
-            padding-left: 10px;
-            height: 570px;
-            float: right;
-            width: 390px;
-            overflow: auto;
-            right: 400px;
-            top: 200px;
-            background-color: white;
-        }
+      ::placeholder { /* Chrome/Opera/Safari */
+        color: #909;
+      }
 
-        #info {
-            position: absolute;
-            size: 40px;
-            font-size: 30px;
-            color: maroon;
-            background: #fff;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
-            top: 0px;
-            right: 0px;
-        }
+      #destination {
 
-        #warning {
-            position: absolute;
-            display: block;
-            visibility: hidden;
-            font-size: 22px;
-            color: maroon;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
-            top: 210px;
-            right: 23%;
-			z-index: 1;
-        }
+          flex-grow: 1;
+          margin-top: 6px;
+      }
 
-        #login {
-            position: relative;
-            right: 15px;
-            top: 5px;
-        }
+      #infocard {
+          position: absolute;
+          left: 80%;
+          top: 10%;
+          z-index: 1;
+      }
 
-        #signup {
-            position: relative;
-            top: 5px;
-        }
+      #topbar {
+          height: 50px;
+      }
 
-        #header1{
-            position: relative;
-            top: 16px;
-        }
+      #loginbutton {
+          margin-top: 10px;
+          margin-bottom: 10px;
+          margin-right: 10px;
+      }
 
-        #left-sidebar-toggle{
-            padding: 14px;
-        }
-        
+      #signupbutton {
+          margin-left: 40px;
+          margin-top: 10px;
+          margin-bottom: 10px;
+      }
+
+      #map {
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          z-index: 0;
+      }
+
+      #start {
+          margin-top: 7px;
+      }
+
+
+      #login {
+          position: relative;
+          right: 15px;
+          top: 5px;
+      }
+
+      #signup {
+          position: relative;
+          top: 5px;
+      }
+
+      #header1{
+          position: relative;
+          top: 16px;
+      }
+
+      #left-sidebar-toggle{
+          padding: 14px;
+      }
