info-window & market color updated

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -104,12 +104,6 @@
               <button class="ui positive button" id="E-direction">Direction</button>
           </div>
 
-          <div class="ui buttons" id="G">
-              <button class="ui button ebuildings marker" id="G-btn" value="{{ getCoords('G') }}" type="button"><i class="teal book icon"></i>Golleher Alumini House</button>
-              <div class="or"></div>
-              <button class="ui positive button" id="G-direction">Direction</button>
-          </div>
-
           <div class="ui buttons" id="H">
               <button class="ui button ebuildings marker" id="H-btn" value="{{ getCoords('H') }}" type="button"><i class="teal book icon"></i>Humanities & Social Science</button>
               <div class="or"></div>
@@ -565,6 +559,12 @@
       <div class="menu">
           <div class="header">Pride of Titans</div>
 
+          <div class="ui buttons" id="G">
+              <button class="ui button tbuildings marker" id="G-btn" value="{{ getCoords('G') }}" type="button"><i class="teal spinner icon"></i>Golleher Alumini House</button>
+              <div class="or"></div>
+              <button class="ui positive button" id="G-direction">Direction</button>
+          </div>
+
           <div class="ui buttons" id="TG">
               <button class="ui button tbuildings marker" id="TG-btn" value="{{ getCoords('TG') }}" type="button"><i class="teal spinner icon"></i>Titan Gymnasium </button>
               <div class="or"></div>
@@ -654,8 +654,7 @@
   <div id="legendmodal" class="ui modal">
          <p><strong>Education Buildings</strong><br>
            CC - Children's Center|| CS - Computer Science|| CPAC - Clayes Performing Arts Center||
-           DBH - Dan Black Hall|| EC - Education Classroom|| E - Engineering|| G - Golleher Alumni House
-           || H - Humanities & Social Science || KHS - Kinesiology & Health Science|| LH - Langsdorf Hall
+           DBH - Dan Black Hall|| EC - Education Classroom|| E - Engineering|| H - Humanities & Social Science || KHS - Kinesiology & Health Science|| LH - Langsdorf Hall
            || MH - McCarthy Hall|| PL - Pollak library|| PLS - Pollak Library South|| RGC - Ruby Gerontology Center
            || SGMH - Steven G. Mihalyo|| UH - University Hall|| VA - Visual Arts</p>
         <p><strong>Food & Dining</strong><br>
@@ -682,7 +681,7 @@
             ARSC - Admission and Records Service Center|| CRC - Career Center|| RH - Resident Hall||
             SH - Student Housing|| SRC - Student Recreation Center</p>
             <p><strong>Titan Pride</strong><br>
-            TG - Titan Gymnasium|| TH - Titan House|| TROTC - Titan ROTC|| TSH - Titan Shop
+            G - Golleher Alumni House || TG - Titan Gymnasium|| TH - Titan House|| TROTC - Titan ROTC|| TSH - Titan Shop
             || TSU - Titan Student Union</p>
             <p><strong>Titan Sports Complex</strong><br>
             TST - Titan Stadium|| GF - Goodwin Field|| AF - Anderson Field</p>
