--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -85,6 +85,13 @@
     var markerButtons = document.getElementsByClassName('ui button marker');
     var dirButtons = document.getElementsByClassName('ui button positive');
 
+    // Style the markers a bit. This will be our listing marker icon.
+    var defaultIcon = makeMarkerIcon('0091ff');
+
+        // Create a "highlighted location" marker color for when the user
+        // mouses over the marker.
+    var highlightedIcon = makeMarkerIcon('FFFF24');
+
     const csufLocation = {
             lat: 33.881994,
             lng: -117.885076
@@ -112,6 +119,7 @@
         var latlng = button.value.split(',');
         var lat = parseFloat(latlng[0]);
         var lng = parseFloat(latlng[1]);
+
 
         function pickImage(bld){
           if (bld == "CS"){
@@ -347,8 +355,17 @@
 
         var marker = new google.maps.Marker({
                 position: new google.maps.LatLng(lat, lng),
+                icon: defaultIcon,
                 animation: google.maps.Animation.DROP
-                // title: array[0]
+        });
+        // Two event listeners - one for mouseover, one for mouseout,
+        // to change the colors back and forth.
+        marker.addListener('mouseover', function() {
+          this.setIcon(highlightedIcon);
+        });
+
+        marker.addListener('mouseout', function() {
+          this.setIcon(defaultIcon);
         });
 
         markers.push(marker);
@@ -357,10 +374,12 @@
 
         button.addEventListener('click', function() {
             if (this.value != "ON") {
+
                 markers[i].setVisible(true);
                 this.value="ON";
-//Added here for Info-Window
+                //Added here for Info-Window
                 var bldid = this.id;
+
                 //for getting abv
                 bldid = bldid.split("-");
                 var array = maindict[bldid[0]];
@@ -386,12 +405,12 @@
                   content: contentString
                 });
 
-                marker.addListener('click', function() {
-                  alert("marker")
-                  infowindow.open(map, marker);
+                markers[i].addListener('click', function() {
+                  infowindow.open(map, markers[i]);
                 });
-// Till here Info-Window
-
+                // Till here Info-Window
+                markers[i].setTitle(array[0]);
+                markers[i].setAnimation(DROP);
             }
             else {
                 markers[i].setVisible(false);
@@ -410,13 +429,23 @@
         }
     }
 
+    function makeMarkerIcon(markerColor) {
+      var markerImage = new google.maps.MarkerImage(
+        'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|'+ markerColor +
+        '|40|_|%E2%80%A2',
+        new google.maps.Size(21, 34),
+        new google.maps.Point(0, 0),
+        new google.maps.Point(10, 34),
+        new google.maps.Size(21,34));
+      return markerImage;
+    }
 
     function initMap() { // displays map on page, sets up variables for the directions service for use later
 //        startTime();
         directionsDisplay = new google.maps.DirectionsRenderer;
         directionsService = new google.maps.DirectionsService;
         var mapOptions = {
-            zoom: 17,
+            zoom: 16,
             center: csufLocation,
             streetViewControl: false,
             mapTypeControl: false,
