--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
     <script  src="{{ url_for('static', filename='scripts/geolocation-marker.js') }}"></script>
     <script  src="{{ url_for('static', filename='scripts/content.js') }}"></script>
     <script  src="{{ url_for('static', filename='scripts/mapstyles.js') }}"></script>
+    <script  src="{{ url_for('static', filename='scripts/markercolor.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <style>
         body {
