--- a/app/templates/campusmap.html
+++ b/app/templates/campusmap.html
@@ -99,7 +99,7 @@
     }
 
     function getCurrPos(position) {
-        var curLoc = position.coords.latitude + "," + position.coords.longitude;
+        curLoc = position.coords.latitude + "," + position.coords.longitude;
         document.getElementById('location').value = curLoc;
         $('#CurrentLocation').data('value', curLoc);
     }
